[project]
name = "hybrid-a-star-planner"
version = "0.1.0"
description = ""
authors = [
    {name = "heyeuu",email = "2829004293@qq.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "rsplan (>=1.0.10,<2.0.0)"
]

[tool.poetry]
packages = [{include = "hybrid_a_star_planner", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
