[project]
name = "hybrid-a-star-planner"
version = "0.1.0"
description = ""
authors = [
    {name = "heyeuu",email = "2829004293@qq.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "heapdict (>=1.0.1,<2.0.0)",
    "curves-generator @ git+ssh://git@github.com/heyeuu/CurvesGenerator.git"
]

[tool.poetry]
packages = [{include = "hybrid_a_star_planner", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
